Updating for approval tests